--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -145,3 +145,6 @@ set -g @plugin 'tmux-plugins/tmux-logging'
 # bind-key -T copy-mode-vi 'C-k' select-pane -U
 # bind-key -T copy-mode-vi 'C-l' select-pane -R
 # bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+set-option -g focus-events on
+set-option -sa terminal-overrides ',XXX:RGB'
