--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -147,4 +147,11 @@ set -g @plugin 'tmux-plugins/tmux-logging'
 # bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 set-option -g focus-events on
-set-option -sa terminal-overrides ',XXX:RGB'
+#set-option -sa terminal-overrides ',XXX:RGB'
+#set-option -ga terminal-overrides ',XXX:Tc'
+
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+set-option -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
